se agrega botón para regresar

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
+  <a class="cp-back" href="https://caminoplateado.com/#recursos" target="_top" title="Volver a la web principal">← Volver a Camino Plateado</a>
   <div class="app">
     <aside class="sidebar">
       <div class="brand">
